# USTC_CG_Homework

./: hw8步骤.md
Framework2D/: .clang-uml
Framework2D/src/assignments/1_MiniDraw/: canvas_widget.cpp  canvas_widget.h  minidraw_window.cpp
Framework2D/src/assignments/2_ImageWarping/: CMakeLists.txt  warping_widget.cpp  warping_widget.h  warping_window.cpp
Framework2D/src/assignments/3_PoissonImageEditing/: CMakeLists.txt  (+5 more)
Framework3D/Ruzino/: LICENSE
Framework3D/Ruzino/scripts/: git_submodule_manager.ps1  git_submodule_manager.py
Framework3D/Ruzino/source/Editor/GUI/python/: CMakeLists.txt  GUI.cpp  README.md  example_simple.py
Framework3D/Ruzino/source/Plugins/hd_RUZINO_GL/: CMakeLists.txt  camera.cpp  camera.h  config.cpp  config.h  global_payload_gl.hpp  instancer.cpp  instancer.h  light.cpp  light.h  material.cpp  material.h  renderBuffer.cpp  renderBuffer.h  renderDelegate.h  renderParam.h  renderPass.cpp  renderPass.h  renderer.cpp  renderer.h  rendererPlugin.cpp  rendererPlugin.h  sampler.cpp  sampler.h
Framework3D/Ruzino/source/Plugins/hd_RUZINO_GL/geometries/: mesh.cpp  mesh.h
Framework3D/Ruzino/source/Plugins/hd_RUZINO_GL/include/GL/: shader.hpp
Framework3D/Ruzino/source/Plugins/hd_RUZINO_GL/internal/gl/: shader.cpp
Framework3D/Ruzino/source/Plugins/hd_RUZINO_GL/nodes/: node_render_deferred_lighting_gl.cpp  node_render_environment_pass_gl.cpp  node_render_rasterize_gl.cpp  node_render_shadow_mapping_gl.cpp  node_render_transparent_refraction_gl.cpp
Framework3D/Ruzino/source/Plugins/hd_RUZINO_GL/nodes/shaders/: blinn_phong.fs  rasterize_impl.fs  ssao.fs
Framework3D/Ruzino/source/Plugins/hd_RUZINO_GL/nodes/utils/: draw_fullscreen.cpp  draw_fullscreen.h
Framework3D/Ruzino/source/Plugins/hd_RUZINO_GL/resources/: plugInfo.json
FrameworkRenderformer/: test_attention_operator.py
FrameworkRenderformer/local_renderformer/layers/: attention.py
FrameworkRenderformer/local_renderformer/models/: view_transformer.py
(+532 files in other folders)
